# NayePankh-AI-Assistant

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup_vectorstore.py
data/animal_welfare/: feeding_drives.md
data/clothing_distribution/: clothing_drive_guide.md
data/donation_and_fundraising/: donor_guide.md
data/education/: student_guidance.md
data/food_relief/: food_distribution_guide.md
data/government_schemes/: schemes.md  scholarships.md  women_welfare_schemes.md
data/menstrual_hygiene/: awareness_manual.md
data/organization/: nayepankh_overview.md
data/reports/: impact_report_templates.md
data/volunteer_management/: volunteer_handbook.md
rag/: ingest.py  rag_chain.py  retriever.py
test_rag/: test_ragchain.py  test_retriever.py
